; ModuleID = '/home/carl/AnghaBench/radare2/libr/io/p/extr_io_default.c___open_default.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/io/p/extr_io_default.c___open_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*, i32, i32)* @__open_default to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @__open_default(i32* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i8*, i8** %7, align 8
  %11 = call i64 @r_io_def_mmap_check_default(i8* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %19

13:                                               ; preds = %4
  %14 = load i32*, i32** %6, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %9, align 4
  %18 = call i32* @r_io_def_mmap_open(i32* %14, i8* %15, i32 %16, i32 %17)
  store i32* %18, i32** %5, align 8
  br label %20

19:                                               ; preds = %4
  store i32* null, i32** %5, align 8
  br label %20

20:                                               ; preds = %19, %13
  %21 = load i32*, i32** %5, align 8
  ret i32* %21
}

declare dso_local i64 @r_io_def_mmap_check_default(i8*) #1

declare dso_local i32* @r_io_def_mmap_open(i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
